--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/dineshdino-kali/testing-application",
+  "homepage": "https://dineshdino-kali.github.io/testing-application",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
